SERVER-62283 stop gap measure to prevent underflow asserting

(cherry picked from commit c87e167ecf9616be6a5878411b87faade3f2ac31)