src/mongo/db/pipeline/memory_usage_tracker_test.cpp
@@ -109,14 +109,18 @@ DEATH_TEST_F(MemoryUsageTrackerTest,
     _tracker.update(-100);
 }
 
-DEATH_TEST_F(MemoryUsageTrackerTest,
-             UpdateFunctionUsageToNegativeIsDisallowed,
-             "Underflow on memory tracking") {
+TEST_F(MemoryUsageTrackerTest, UpdateFunctionUsageToNegativeIsDisallowed) {
     _funcTracker.set(50LL);
     ASSERT_EQ(_tracker.currentMemoryBytes(), 50LL);
     ASSERT_EQ(_tracker.maxMemoryBytes(), 50LL);
 
+    // TODO SERVER-61281: Temporarily disable the assert (and associated test) in
+    // PerFunctionMemoryTracker.update() to prevent inaccurate tracking to cause underflow errors
+    // Once accurate tracking is implemented and no underflow should happen, this negative test
+    // could be restored to verify that "Underflow on memory tracking" is reported.
+
     _funcTracker.update(-100);
+    ASSERT_EQ(_tracker.currentMemoryBytes(), 0LL);
 }
 
 }  // namespace
